fix: DropdownUserCard overflow, fix: game threads container don't stretch on full screen, reword & fix: replace direct DropdownUserCard with VirtualUserCard to more control and fix x axis overflow, style: add cursor pointer style to the BackButton

--- a/front-end/echoverse/src/assets/output.css
+++ b/front-end/echoverse/src/assets/output.css
@@ -978,6 +978,10 @@ video {
   height: calc(100dvh - 101px);
 }
 
+.h-\[calc\(100dvh-113px\)\]{
+  height: calc(100dvh - 113px);
+}
+
 .h-\[calc\(100dvh-41px\)\]{
   height: calc(100dvh - 41px);
 }
@@ -988,6 +992,10 @@ video {
 
 .h-\[calc\(100svh-127px\)\]{
   height: calc(100svh - 127px);
+}
+
+.h-auto{
+  height: auto;
 }
 
 .h-dvh{
@@ -1043,12 +1051,12 @@ video {
   max-height: 80dvh;
 }
 
-.max-h-\[calc\(100dvh-112px\)\]{
-  max-height: calc(100dvh - 112px);
-}
-
 .max-h-\[calc\(100dvh-124px\)\]{
   max-height: calc(100dvh - 124px);
+}
+
+.max-h-dvh{
+  max-height: 100dvh;
 }
 
 .min-h-10{
@@ -1726,10 +1734,6 @@ video {
 
 .overflow-x-hidden{
   overflow-x: hidden;
-}
-
-.overflow-y-scroll{
-  overflow-y: scroll;
 }
 
 .truncate{
@@ -3456,12 +3460,12 @@ textarea::-ms-input-placeholder input::-ms-input-placeholder {
     height: calc(100dvh - 109px);
   }
 
-  .md\:h-\[calc\(100dvh-49px\)\]{
-    height: calc(100dvh - 49px);
+  .md\:h-\[calc\(100dvh-121px\)\]{
+    height: calc(100dvh - 121px);
   }
 
-  .md\:max-h-\[calc\(100dvh-120px\)\]{
-    max-height: calc(100dvh - 120px);
+  .md\:h-\[calc\(100dvh-49px\)\]{
+    height: calc(100dvh - 49px);
   }
 
   .md\:w-48{
@@ -3514,6 +3518,11 @@ textarea::-ms-input-placeholder input::-ms-input-placeholder {
 
   .md\:bg-black-dark\/50{
     background-color: rgb(0 0 0 / 0.5);
+  }
+
+  .md\:bg-black-night{
+    --tw-bg-opacity: 1;
+    background-color: rgb(18 18 18 / var(--tw-bg-opacity));
   }
 
   .md\:px-0{
@@ -3598,6 +3607,12 @@ textarea::-ms-input-placeholder input::-ms-input-placeholder {
     letter-spacing: 0.025em;
   }
 
+  .md\:shadow-none{
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  }
+
   .md\:backdrop-blur{
     --tw-backdrop-blur: blur(8px);
     -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -3668,12 +3683,12 @@ textarea::-ms-input-placeholder input::-ms-input-placeholder {
     height: 293px;
   }
 
-  .lg\:h-\[calc\(100dvh-80px\)\]{
-    height: calc(100dvh - 80px);
+  .lg\:h-\[calc\(100dvh-129px\)\]{
+    height: calc(100dvh - 129px);
   }
 
-  .lg\:max-h-\[calc\(100dvh-128px\)\]{
-    max-height: calc(100dvh - 128px);
+  .lg\:h-\[calc\(100dvh-80px\)\]{
+    height: calc(100dvh - 80px);
   }
 
   .lg\:max-h-\[calc\(100dvh-132px\)\]{
@@ -3884,8 +3899,8 @@ textarea::-ms-input-placeholder input::-ms-input-placeholder {
     height: calc(100dvh - 126px);
   }
 
-  .xl\:max-h-\[calc\(100dvh-174px\)\]{
-    max-height: calc(100dvh - 174px);
+  .xl\:h-\[calc\(100dvh-175px\)\]{
+    height: calc(100dvh - 175px);
   }
 
   .xl\:max-h-\[calc\(100dvh-178px\)\]{
